fix side bar collapse transition

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -3,11 +3,12 @@
  * @Date: 2021/7/23 10:43
  */
 
-.sideNav {
+.side-nav {
     overflow: auto;
     position: fixed;
     bottom: 0;
     top: 0;
+    z-index: 1;
 }
 
 /*set icon align center when collapse*/
@@ -27,6 +28,8 @@
 /*menu collapse*/
 .trigger {
     font-size: 18px;
+    margin-left: 200px;
+    transition: all 0.2s;
 }
 
 /*dropdown menu*/
@@ -61,9 +64,8 @@
     padding: 0;
     background: #fff;
     position: fixed;
-    left: 200px;
     right: 0;
-    transition: all 0.2s;
+    left: 0;
 }
 
 .site-layout-background-content {
